--- a/Alien Abduction/appsettings.json
+++ b/Alien Abduction/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "EmployeeAppCon": "mongodb+srv://alienabduction:alien123@cluster0.0bpjp.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
