--- a/Alien Abduction/Alien Abduction.csproj
+++ b/Alien Abduction/Alien Abduction.csproj
@@ -7,22 +7,22 @@
 
   <ItemGroup>
     <Compile Remove="Controllers\NewFolder\**" />
+    <Compile Remove="NewFolder1\**" />
     <Compile Remove="NewFolder\**" />
     <Content Remove="Controllers\NewFolder\**" />
+    <Content Remove="NewFolder1\**" />
     <Content Remove="NewFolder\**" />
     <EmbeddedResource Remove="Controllers\NewFolder\**" />
+    <EmbeddedResource Remove="NewFolder1\**" />
     <EmbeddedResource Remove="NewFolder\**" />
     <None Remove="Controllers\NewFolder\**" />
+    <None Remove="NewFolder1\**" />
     <None Remove="NewFolder\**" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.16" />
     <PackageReference Include="MongoDB.Driver" Version="2.14.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="NewFolder1\" />
   </ItemGroup>
 
 
