--- a/Alien Abduction/appsettings.json
+++ b/Alien Abduction/appsettings.json
@@ -1,7 +1,4 @@
 {
-  "ConnectionStrings": {
-    "EmployeeAppCon": "mongodb+srv://alienabduction:alien123@cluster0.0bpjp.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -9,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DatabaseSettings": {
+    "ConnectionString": "mongodb+srv://alienabduction:alien123@cluster0.0bpjp.mongodb.net/myFirstDatabase?retryWrites=true&w=majority",
+    "DatabaseName": "AlienAbduction"
+  }
 }
