--- a/Alien Abduction/client-app/package.json
+++ b/Alien Abduction/client-app/package.json
@@ -3,21 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^16.11.21",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
-    "axios": "^0.25.0",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^12.20.13",
+    "@types/react": "^17.0.8",
+    "@types/react-calendar": "^3.4.0",
+    "@types/react-dom": "^17.0.5",
+    "@types/yup": "^0.29.11",
+    "axios": "^0.21.1",
+    "date-fns": "^2.22.1",
+    "formik": "^2.2.9",
+    "mobx": "^6.3.2",
+    "mobx-react-lite": "^3.2.0",
     "react": "^17.0.2",
+    "react-calendar": "^3.4.0",
+    "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "react-toastify": "^7.0.4",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.1.1",
-    "typescript": "^4.5.5",
-    "web-vitals": "^2.1.4"
+    "semantic-ui-react": "^2.0.3",
+    "typescript": "^4.2.4",
+    "uuid": "^8.3.2",
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,5 +54,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-datepicker": "^3.1.8",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/uuid": "^8.3.0"
   }
 }
