--- a/Alien Abduction/API/appsettings.Development.json
+++ b/Alien Abduction/API/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=alienAbduction.db"
+    "DefaultConnection": "Data source=C:\\Users\\NESA\\Desktop\\CSE\\Semestri 5\\Game Programming\\AlienAbduction\\alienAbduction.db"
   }
 }
